--- a/SunSync/SyncResultPage.xaml
+++ b/SunSync/SyncResultPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="700" Loaded="SyncResultLoaded_EventHandler"
+      d:DesignHeight="670" d:DesignWidth="700" Loaded="SyncResultLoaded_EventHandler"
 	Title="SyncResultPage">
 
     <Grid>
@@ -15,7 +15,7 @@
         <StackPanel Grid.Row="0">
             <Border BorderBrush="#FF1986D1" BorderThickness="0 0 0 2">
                 <StackPanel Orientation="Horizontal" Margin="10">
-                    <Image Height="48" Width="48" Source="Images/result.png" VerticalAlignment="Center" />
+                    <Image Height="48" Width="48" Source="Pictures/result.png" VerticalAlignment="Center" />
                     <TextBlock Text="同步结果" FontSize="32" VerticalAlignment="Center" Margin="10 0" Width="500"
                                Name="SyncResultTitleTextBlock"></TextBlock>
                 </StackPanel>
