--- a/SunSync/QuickStartPage.xaml
+++ b/SunSync/QuickStartPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="700"
+      d:DesignHeight="670" d:DesignWidth="700"
 	Title="QuickStartPage" Loaded="QuickStartPageLoaded_EventHandler">
     
     <Grid>
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <Image Source="Images/qiniu_logo.jpg" Height="100" 
+            <Image Source="Pictures/qiniu_logo.jpg" Height="100" 
                    MouseLeftButtonUp="ChangeTopBgImage_EventHandler" Name="TopLogoImage" Margin="0" VerticalAlignment="Top"></Image>
         </StackPanel>
         <Grid Grid.Row="1">
