--- a/SunSync/SyncSettingPage.xaml
+++ b/SunSync/SyncSettingPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="680"
+      d:DesignHeight="670" d:DesignWidth="680"
 	Title="SyncSettingPage" Loaded="SyncSettingPageLoaded_EventHandler">
 
     <Grid>
@@ -15,17 +15,17 @@
         <StackPanel Grid.Row="0">
             <Border BorderBrush="#FF1986D1" BorderThickness="0 0 0 2">
                 <StackPanel Orientation="Horizontal" Margin="10">
-                    <Image Height="48" Width="48" Source="Images/back.png" VerticalAlignment="Center" 
+                    <Image Height="48" Width="48" Source="Pictures/back.png" VerticalAlignment="Center" 
                        Cursor="Hand"
                        MouseLeftButtonUp="BackToHome_EventHandler"/>
                     <TextBlock Text="同步设置" FontSize="32" VerticalAlignment="Center" Margin="10 0"></TextBlock>
                 </StackPanel>
             </Border>
         </StackPanel>
-        <StackPanel Grid.Row="1" Margin="5">
+        <StackPanel Grid.Row="1" Margin="10">
             <StackPanel Orientation="Vertical">
-                <TabControl Height="520" Name="SyncSettingTabControl">
-                    <TabItem Name="TabItemSyncSettingsBasics" Header="基本设置" FontSize="16">
+                <TabControl Height="500" Name="SyncSettingTabControl">
+                    <TabItem Header="基本设置" FontSize="16">
                         <StackPanel Orientation="Vertical" Width="500" Margin="10">
                             <StackPanel>
                                 <Label Content="本地目录" FontSize="16" Margin="0 10"></Label>
@@ -34,7 +34,7 @@
                                              VerticalContentAlignment="Center" Name="SyncLocalFolderTextBox"></TextBox>
                                     <Button Width="52" Height="52" Margin="10 0" 
                                             Click="BrowseFolderButton_EventHandler">
-                                        <Image Source="Images/folder.png"></Image>
+                                        <Image Source="Pictures/folder.png"></Image>
                                     </Button>
                                 </StackPanel>
                             </StackPanel>
@@ -43,106 +43,59 @@
                                 <Label Content="目标空间" FontSize="16" Margin="0 10"></Label>
                                 <StackPanel Orientation="Horizontal">
                                     <ComboBox FontSize="16" Height="48" Width="400" Foreground="Green"
-                                             Name="SyncTargetBucketsComboBox" SelectionChanged="SyncTargetBucketsComboBox_SelectionChanged"
-                                             HorizontalAlignment="Left" VerticalContentAlignment="Center">               
+                                             Name="SyncTargetBucketsComboBox"
+                                             HorizontalAlignment="Left" VerticalContentAlignment="Center">
                                     </ComboBox>
                                     <Button Width="52" Height="52" Margin="10 0" 
                                                 Click="ReloadBucketButton_EventHandler">
-                                        <Image Source="Images/reload.png"></Image>
+                                        <Image Source="Pictures/reload.png"></Image>
                                     </Button>
                                 </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                    <TextBlock Name="TextBlockTargetZone" FontSize="14" Foreground="Green"></TextBlock>
-                                </StackPanel>
                             </StackPanel>
-                            <TextBlock Name="SettingsErrorTextBlock" Foreground="Red" FontSize="14" TextWrapping="Wrap" Margin="0,20,0,0"></TextBlock>
+                            <StackPanel>
+                                <CheckBox Name="CheckRemoteDuplicateCheckBox" Content="上传前检查空间同名文件" FontSize="16" Margin="0 10" VerticalContentAlignment="Center"></CheckBox>
+                            </StackPanel>
+                            <StackPanel>
+                                <TextBlock Name="SettingsErrorTextBlock" Text="" Margin="0 10" Foreground="Red"></TextBlock>
+                            </StackPanel>
                         </StackPanel>
                     </TabItem>
-                    <TabItem Name="TabItemSyncSettingsAdvanced" Header="高级设置" FontSize="14" Margin="-2,-2,-2,2">
+                    <TabItem Header="高级设置" FontSize="16">
                         <StackPanel Orientation="Vertical" Width="560" Margin="0">
                             <StackPanel>
-                                <GroupBox Header="可选参数" FontSize="14">
+                                <GroupBox Header="可选参数" FontSize="16">
                                     <StackPanel Orientation="Vertical" Margin="5">
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label FontSize="14" Content="附加文件前缀" VerticalAlignment="Center" Width="110"></Label>
+                                            <Label FontSize="16" Content="附加文件前缀" VerticalAlignment="Center" Width="110"></Label>
                                             <TextBox Width="350" Margin="10 0" VerticalContentAlignment="Center"
-                                                     Name="PrefixTextBox" Foreground="Green">
-                                                <TextBox.ToolTip>
-                                                    <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                        假设原来要保存的文件名为'path/1.jpg'，设置前缀'img-'后将保存为'img-path/1.jpg'
-                                                    </ToolTip>
-                                                </TextBox.ToolTip>
-                                            </TextBox>
-                                        </StackPanel>                                       
+                                                     Name="PrefixTextBox" Foreground="Green"></TextBox>
+                                        </StackPanel>
+                                        
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label FontSize="14" Content="按前缀跳过" VerticalAlignment="Center" Width="110"></Label>
+                                            <Label FontSize="16" Content="按前缀跳过" VerticalAlignment="Center" Width="110"></Label>
                                             <TextBox Width="350" Margin="10 0" VerticalContentAlignment="Center"
-                                                     Name="SkipPrefixesTextBox" Foreground="Green">
-                                                <TextBox.ToolTip>
-                                                    <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                        可设置多个前缀，此时请使用西文逗号(,)间隔
-                                                    </ToolTip>
-                                                </TextBox.ToolTip>
-                                            </TextBox>
+                                                     Name="SkipPrefixesTextBox" Foreground="Green"></TextBox>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label FontSize="14" Content="按后缀跳过" VerticalAlignment="Center" Width="110"></Label>
+                                            <Label FontSize="16" Content="按后缀跳过" VerticalAlignment="Center" Width="110"></Label>
                                             <TextBox Width="350" Margin="10 0" VerticalContentAlignment="Center"
-                                                     Name="SkipSuffixesTextBox" Foreground="Green">
-                                                <TextBox.ToolTip>
-                                                    <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                        可设置多个后缀，此时请使用西文逗号(,)间隔
-                                                    </ToolTip>
-                                                </TextBox.ToolTip>
-                                            </TextBox>
+                                                     Name="SkipSuffixesTextBox" Foreground="Green"></TextBox>
                                         </StackPanel>
-                                        <StackPanel Margin="5 10">
-                                            <CheckBox Content="增量同步(只上传待同步目录下新增的文件)" FontSize="14" Name="CheckNewFilesCheckBox" VerticalContentAlignment="Center" Margin="5 0">
-                                                <CheckBox.ToolTip>
-                                                    <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                       勾选此项时程序会扫描同步历史记录并跳过记录中已有文件；取消勾选则不扫描历史记录
-                                                    </ToolTip>
-                                                </CheckBox.ToolTip>
-                                            </CheckBox>
+                                        <StackPanel Margin="5">
+                                            <CheckBox Content="每次同步前检查本地增量文件并上传" FontSize="16" Name="CheckNewFilesCheckBox" VerticalContentAlignment="Center" Margin="5 0"></CheckBox>
                                         </StackPanel>
-                                        <!--
-                                        <GroupBox Header="保存文件名设置">
-                                        -->
-                                            <StackPanel Orientation="Horizontal" Margin="5 10">
-                                                <Label>保存文件名设置</Label>
-                                                <!--
-                                                <RadioButton Content="使用完整路径(保存文件名包含完整路径)" FontSize="14" Name="RadioButtonUseFullFilename" VerticalContentAlignment="Center" Margin="5">
-                                                </RadioButton>
-                                                -->
-                                                <RadioButton Content="使用相对路径" FontSize="14" Name="RadioButtonUseRelativePath" VerticalContentAlignment="Center" Margin="5">
-                                                    <RadioButton.ToolTip>
-                                                        <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                            举例：当前路径'C:/dir1/','源文件'C:/dir1/dir2/hello.jpg',即将保存文件名为'dir2/hello.jpg'
-                                                        </ToolTip>
-                                                    </RadioButton.ToolTip>
-                                                </RadioButton>
-                                                <RadioButton Content="使用短文件名" FontSize="14" Name="RadioButtonUseShortFilename" VerticalContentAlignment="Center" Margin="5">
-                                                    <RadioButton.ToolTip>
-                                                        <ToolTip BorderThickness="0" Background="Black" Foreground="Yellow">
-                                                            举例：源文件'C:/fakepath/hello.jpg'的短文件名为'hello.jpg'
-                                                        </ToolTip>
-                                                    </RadioButton.ToolTip>
-                                                </RadioButton>                                                
-                                            </StackPanel>                                            
-                                    <!--    
-                                    </GroupBox> 
-                                    -->
-                                        <StackPanel Margin="5" Orientation="Horizontal">
-                                            <Label>空间中同名文件</Label>
-                                            <RadioButton GroupName="CheckRemoteDuplicates" Name="RadioButtonSkipDuplicate" Content="跳过" Margin="5,5,0,0"></RadioButton>
-                                            <RadioButton GroupName="CheckRemoteDuplicates" Name="RadioButtonOverwriteDuplicate" Content="覆盖" Margin="20,5,0,0"></RadioButton>
+                                        <StackPanel Margin="5">
+                                            <CheckBox Content="忽略文件名相对路径，使用短文件名" FontSize="16" Name="IgnoreDirCheckBox" VerticalContentAlignment="Center" Margin="5 0"></CheckBox>
+                                        </StackPanel>
+                                        <StackPanel Margin="5">
+                                            <CheckBox Content="遇到空间中存在同名文件则强制覆盖" FontSize="16" Name="OverwriteFileCheckBox" VerticalContentAlignment="Center" Margin="5 0"></CheckBox>
                                         </StackPanel>
                                     </StackPanel>
                                 </GroupBox>
                             </StackPanel>
                             <StackPanel Margin="0 ">
-                                <GroupBox Header="高级参数" FontSize="14">
-                                    <StackPanel Orientation="Vertical">
+                                <GroupBox Header="高级参数" FontSize="16">
+                                    <StackPanel Orientation="Vertical" Margin="5">
                                         <StackPanel Orientation="Horizontal" Margin="5">
                                             <Label Content="分片默认大小" VerticalAlignment="Center" Width="110"></Label>
                                             <ComboBox Width="320" VerticalAlignment="Center" Margin="10 0" Name="ChunkDefaultSizeComboBox" SelectionChanged="ChunkDefaultSizeSelectChanged_EventHandler">
@@ -156,11 +109,11 @@
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
                                             <Label Content="分片上传阈值" VerticalAlignment="Center" Width="110"></Label>
-                                            <Slider  Width="320" VerticalAlignment="Center" Margin="10 0" Minimum="4" Maximum="100"
+                                            <Slider  Width="320" VerticalAlignment="Center" Margin="10 0" Minimum="4" Maximum="500"
                                                      Name="ChunkUploadThresholdSlider" 
                                                       IsSnapToTickEnabled="True" TickFrequency="1"
                                                      VerticalContentAlignment="Center" ValueChanged="ChunkUploadThresholdChange_EventHandler"/>
-                                            <Label Name="ChunkUploadThresholdLabel" FontSize="10" VerticalContentAlignment="Center">4MB</Label>
+                                            <Label Name="ChunkUploadThresholdLabel" FontSize="10" VerticalContentAlignment="Center">10MB</Label>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
                                             <Label Content="同步的并发数" VerticalAlignment="Center" Width="110"></Label>
@@ -172,26 +125,28 @@
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
                                             <Label Content="上传方式选择" VerticalAlignment="Center" Width="110"></Label>
-                                            <RadioButton GroupName="UploadThrough" Name="RadioButtonDirect" Content="直传源站" Margin="20,5,0,0"></RadioButton>
-                                            <RadioButton GroupName="UploadThrough" Name="RadioButtonFromCDN" Content="CDN加速" Margin="50,5,0,0"></RadioButton>
+                                            <RadioButton x:Name="UploadByCdnRadioButton" VerticalAlignment="Center" Content="CDN加速上传"
+                                                         GroupName="UploadByRadioGroup" Margin="10 0" Checked="UploadByCdnRadioButton_Checked"/>
+                                            <RadioButton x:Name="UploadBySrcRadioButton" VerticalAlignment="Center" Content="直接上传源站" 
+                                                         GroupName="UploadByRadioGroup" Margin="40 0" Checked="UploadBySrcRadioButton_Checked"/>
                                         </StackPanel>
                                     </StackPanel>
                                 </GroupBox>
                             </StackPanel>
-                                
+
                         </StackPanel>
                     </TabItem>
                 </TabControl>
-                
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+
+                <StackPanel>
                     <Button Content="开始同步" Width="100" Height="32" Margin="0 10" 
                             HorizontalAlignment="Right"
-                            FontSize="14" Name="ButtonStartSync"
+                            FontSize="14"
                             Click="StartSyncButton_EventHandler"
                             ></Button>
                 </StackPanel>
             </StackPanel>
-            
+
         </StackPanel>
     </Grid>
 </Page>
