--- a/SunSync/SyncSettingPage.xaml
+++ b/SunSync/SyncSettingPage.xaml
@@ -53,7 +53,18 @@
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel>
-                                <CheckBox Name="CheckRemoteDuplicateCheckBox" Content="上传前检查空间同名文件" FontSize="16" Margin="0 10" VerticalContentAlignment="Center"></CheckBox>
+                                <Label Content="存储类型" FontSize="16" Margin="0 10"></Label>
+                                <StackPanel Orientation="Horizontal">
+                                    <ComboBox FontSize="16" Height="48" Width="400" Foreground="Green"
+                                             Name="FileTypeComboBox"
+                                             HorizontalAlignment="Left" VerticalContentAlignment="Center">
+                                        <ComboBoxItem Content="普通存储"/>
+                                        <ComboBoxItem Content="低频存储"/>
+                                    </ComboBox>
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel>
+                                <CheckBox Name="CheckRemoteDuplicateCheckBox" Content="上传前检查空间是否存在同名文件" FontSize="16" Margin="0 10" VerticalContentAlignment="Center" Checked="CheckRemoteDuplicateCheckBox_Checked"></CheckBox>
                             </StackPanel>
                             <StackPanel>
                                 <TextBlock Name="SettingsErrorTextBlock" Text="" Margin="0 10" Foreground="Red"></TextBlock>
