--- a/SunSync/QuickStartPage.xaml
+++ b/SunSync/QuickStartPage.xaml
@@ -39,14 +39,21 @@
                               Name="CreateNewTask_TextBlock"
                               ></TextBlock>
                     <TextBlock TextDecorations="Underline" 
-                              Text="帐号设置" Margin="0 10"
+                              Text="帐号设置" Margin="0 10 0 0"
                               FontSize="16"
                               Foreground="MediumBlue"
                               MouseLeftButtonUp="SetAccount_EventHandler"
                               Cursor="Hand"
                               ></TextBlock>
+                    <TextBlock TextDecorations="Underline" 
+                              Text="域名设置" Margin="0 10 0 0"
+                              FontSize="16"
+                              Foreground="MediumBlue"
+                              MouseLeftButtonUp="SetDomains_EventHandler"
+                              Cursor="Hand"
+                              ></TextBlock>
                     <TextBlock TextDecorations="Underline"
-                              Text="关于" Margin="0"
+                              Text="关于" Margin="0 10 0 0"
                               FontSize="16"
                               Foreground="MediumBlue"
                               MouseLeftButtonUp="AboutApp_EventHandler"
